--- a/style.css
+++ b/style.css
@@ -376,9 +376,59 @@ footer {
 }
 .fotertop {
   padding-top: 58px;
-  max-width: 540px;
+  max-width: 447px;
   margin: 0 auto;
 }
 .fotertop p {
-  margin: 58px;
+  margin-bottom: 24px;
+  color: #fff;
+
+  text-align: center;
+  font-family: Rubik;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 40px; /* 307.692% */
+  letter-spacing: 5px;
+}
+.fotertop h2 {
+  max-width: 423px;
+  text-align: center;
+  color: #fff;
+  text-align: center;
+  font-family: Rubik;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 40px; /* 125% */
+  letter-spacing: -0.1px;
+  margin-bottom: 36px;
+}
+form {
+  display: flex;
+  gap: 16px;
+}
+form input {
+  width: 300px;
+  height: 48px;
+  padding: 10px 10px 10px 20px;
+  border-radius: 5px;
+  border: none;
+  font-size: 14px;
+}
+form button {
+  max-width: 158px;
+  padding: 10px 24px;
+  border: 1px solid #ff5939;
+  border-radius: 5px;
+  color: #fa5959;
+  text-align: center;
+  font-family: Rubik;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px; /* 200% */
+  letter-spacing: 0.25px;
+}
+.foterbottom {
+  background-color: #272a46;
 }
