--- a/style.css
+++ b/style.css
@@ -431,6 +431,9 @@ form button {
   letter-spacing: 0.25px;
 }
 .foterbottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 88px;
   background-color: #272a46;
 }
@@ -438,7 +441,6 @@ form button {
   max-width: 1104px;
   display: flex;
   margin: 0px auto;
-  padding: 35px;
   align-items: center;
   justify-content: space-between;
 }
